--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.5",
   "description": "Time synchronization between peers",
   "author": "Jos de Jong <wjosdejong@gmail.com> (https://github.com/josdejong)",
-  "main": "./lib/timesync.js",
+  "main": "./timesync.js",
   "license": "MIT",
   "keywords": [
     "time",
